# InventoryProject

./: CHANGELOG  InventoryProjectGlade.glade  meson.build  org.gbw.InventoryOMatic.json
data/: meson.build  org.gbw.InventoryOMatic.appdata.xml.in  org.gbw.InventoryOMatic.desktop.in  org.gbw.InventoryOMatic.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gtkinventoryproject-window.cpp  gtkinventoryproject-window.h  gtkinventoryproject.gresource.xml  main.cpp  meson.build
